--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
   ],
   "devDependencies": {
     "eslint": "^2.11.1"
+  },
+  "dependencies": {
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^1.3.0",
+    "eslint-plugin-mongodb": "^0.2.4",
+    "eslint-plugin-node": "^1.5.1",
+    "eslint-plugin-promise": "^1.3.2"
   }
 }
