--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "eslint": "^3.2.2",
     "mocha": "^3.0.2"
   },
+  "peerDependencies": {
+    "eslint": "^3.2.2"
+  },
   "dependencies": {
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.3.0",
