--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "^3.13.0"
   },
   "dependencies": {
-    "eslint-config-angular": "^0.5.0",
+    "eslint-config-angular": "0.5.0",
     "eslint-plugin-angular": "^1.3.0",
     "eslint-plugin-mongodb": "^0.2.4",
     "eslint-plugin-node": "^3.0.4",
