--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "devDependencies": {
     "eslint": "^3.13.0",
-    "mocha": "^3.0.2"
+    "mocha": "3.2.0"
   },
   "peerDependencies": {
     "eslint": "^3.13.0"
