--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "simplifield"
   ],
   "devDependencies": {
-    "eslint": "^3.13.0",
+    "eslint": "3.14.1",
     "mocha": "3.2.0"
   },
   "peerDependencies": {
