--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "eslint-plugin-angular": "1.6.1",
     "eslint-plugin-mongodb": "0.2.4",
     "eslint-plugin-node": "^3.0.4",
-    "eslint-plugin-promise": "^3.0.0"
+    "eslint-plugin-promise": "3.4.0"
   }
 }
