--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "test": "mocha test/*.mocha.js",
     "lint": "eslint index.js lib/*.js test/*.js",
+    "prettify": "prettier --write index.js lib/*.js test/*.js",
     "version": "npm run changelog && git add CHANGELOG.md"
   },
   "repository": {
@@ -22,7 +23,8 @@
   "devDependencies": {
     "conventional-changelog-cli": "1.3.4",
     "eslint": "4.10.0",
-    "mocha": "4.0.1"
+    "mocha": "4.0.1",
+    "prettier": "1.7.4"
   },
   "peerDependencies": {},
   "dependencies": {
