--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "prettier": "1.18.2"
   },
   "peerDependencies": {},
-  "dependencies": {}
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "4.9.1",
+    "@typescript-eslint/parser": "4.9.1"
+  }
 }
